[metadata]
name = mist-cloud-comm-tools
version = 0.0.1
author = Mist Fog
author_email = author@thinnect.com
description = Tools for interacting with Mist<->Cloud communications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinnect/mist-cloud-comm-tools
project_urls =
    Bug Tracker = https://github.com/thinnect/mist-cloud-comm-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    protobuf >= '3.17.3'
    pika >= '1.2.0'

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mist-cloud-sender = mist_cloud_comm_tools.mist_sender:main
    mist-cloud-sniffer = mist_cloud_comm_tools.mist_sniffer:main